--- a/trunk/lotteria/Classes/MainBody/FindCellView.xib
+++ b/trunk/lotteria/Classes/MainBody/FindCellView.xib
@@ -80,7 +80,7 @@
 							<object class="IBUIButton" id="175480501">
 								<reference key="NSNextResponder" ref="150445108"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{273, 22}, {37, 37}}</string>
+								<string key="NSFrame">{{278, 22}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="150445108"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -91,7 +91,7 @@
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
 								</object>
-								<object class="NSColor" key="IBUIHighlightedTitleColor">
+								<object class="NSColor" key="IBUIHighlightedTitleColor" id="950587873">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
@@ -111,6 +111,105 @@
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">ico_list_arrow_off.png</string>
+								</object>
+							</object>
+							<object class="IBUILabel" id="947780874">
+								<reference key="NSNextResponder" ref="150445108"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{96, 7}, {175, 22}}</string>
+								<reference key="NSSuperview" ref="150445108"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">한우레이디버거</string>
+								<object class="NSFont" key="IBUIFont" id="909458987">
+									<string key="NSName">Helvetica-Bold</string>
+									<double key="NSSize">16</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4yODYyNzQ1MDk4IDAuMTI5NDExNzY0NyAwLjAzMTM3MjU0OTAyAA</bytes>
+								</object>
+								<reference key="IBUIHighlightedColor" ref="950587873"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+							</object>
+							<object class="IBUILabel" id="194366224">
+								<reference key="NSNextResponder" ref="150445108"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{119, 54}, {152, 22}}</string>
+								<reference key="NSSuperview" ref="150445108"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">4,500</string>
+								<reference key="IBUIFont" ref="909458987"/>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4yNTA5ODAzOTIyIDAuMTMzMzMzMzMzMyAwLjA1NDkwMTk2MDc4AA</bytes>
+								</object>
+								<reference key="IBUIHighlightedColor" ref="950587873"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+							</object>
+							<object class="IBUILabel" id="623858843">
+								<reference key="NSNextResponder" ref="150445108"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{96, 25}, {195, 30}}</string>
+								<reference key="NSSuperview" ref="150445108"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">고급 한우육에 국내산 떡을 믹싱하여 맛과 Fun이 가미된 독특한 컨셉의 버거</string>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">9</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC42NjI3NDUwOTggMC41MDE5NjA3ODQzIDAuMzU2ODYyNzQ1MQA</bytes>
+								</object>
+								<reference key="IBUIHighlightedColor" ref="950587873"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUINumberOfLines">3</int>
+							</object>
+							<object class="IBUIImageView" id="783461511">
+								<reference key="NSNextResponder" ref="150445108"/>
+								<int key="NSvFlags">256</int>
+								<string key="NSFrame">{{97, 58}, {14, 14}}</string>
+								<reference key="NSSuperview" ref="150445108"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">4</int>
+								<bool key="IBUIMultipleTouchEnabled">YES</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">ico_price.png</string>
+								</object>
+							</object>
+							<object class="IBUIImageView" id="34953089">
+								<reference key="NSNextResponder" ref="150445108"/>
+								<int key="NSvFlags">256</int>
+								<string key="NSFrame">{{66, 5}, {30, 25}}</string>
+								<reference key="NSSuperview" ref="150445108"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">4</int>
+								<bool key="IBUIMultipleTouchEnabled">YES</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">ico_new.png</string>
 								</object>
 							</object>
 						</object>
@@ -196,6 +295,11 @@
 							<reference ref="464708638"/>
 							<reference ref="1057018751"/>
 							<reference ref="175480501"/>
+							<reference ref="947780874"/>
+							<reference ref="194366224"/>
+							<reference ref="623858843"/>
+							<reference ref="783461511"/>
+							<reference ref="34953089"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -214,6 +318,31 @@
 						<reference key="object" ref="175480501"/>
 						<reference key="parent" ref="206078282"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">134</int>
+						<reference key="object" ref="947780874"/>
+						<reference key="parent" ref="206078282"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">135</int>
+						<reference key="object" ref="623858843"/>
+						<reference key="parent" ref="206078282"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">136</int>
+						<reference key="object" ref="194366224"/>
+						<reference key="parent" ref="206078282"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">137</int>
+						<reference key="object" ref="783461511"/>
+						<reference key="parent" ref="206078282"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">138</int>
+						<reference key="object" ref="34953089"/>
+						<reference key="parent" ref="206078282"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -226,6 +355,12 @@
 					<string>102.IBPluginDependency</string>
 					<string>128.IBViewBoundsToFrameTransform</string>
 					<string>130.IBPluginDependency</string>
+					<string>134.IBPluginDependency</string>
+					<string>134.IBViewBoundsToFrameTransform</string>
+					<string>135.IBPluginDependency</string>
+					<string>135.IBViewBoundsToFrameTransform</string>
+					<string>136.IBPluginDependency</string>
+					<string>136.IBViewBoundsToFrameTransform</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -237,6 +372,18 @@
 						<bytes key="NSTransformStruct">P4AAAL+AAABBoAAAwpwAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<object class="NSAffineTransform">
+						<bytes key="NSTransformStruct">AULAAABA4AAAA</bytes>
+					</object>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<object class="NSAffineTransform">
+						<bytes key="NSTransformStruct">P4AAAL+AAABCwAAAwlgAAA</bytes>
+					</object>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<object class="NSAffineTransform">
+						<bytes key="NSTransformStruct">P4AAAL+AAABCygAAwgAAAA</bytes>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -255,7 +402,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">133</int>
+			<int key="maxID">138</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -430,6 +577,14 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">UILabel</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UILabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">UIResponder</string>
 					<string key="superclassName">NSObject</string>
 					<reference key="sourceIdentifier" ref="990327596"/>
@@ -487,6 +642,8 @@
 				<string>bg_dot_line.png</string>
 				<string>ico_list_arrow_off.png</string>
 				<string>ico_list_arrow_on.png</string>
+				<string>ico_new.png</string>
+				<string>ico_price.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
@@ -494,6 +651,8 @@
 				<string>{280, 2}</string>
 				<string>{37, 37}</string>
 				<string>{37, 37}</string>
+				<string>{30, 25}</string>
+				<string>{14, 14}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">132</string>
