--- a/trunk/lotteria/Classes/MainBody/MainBodyView.xib
+++ b/trunk/lotteria/Classes/MainBody/MainBodyView.xib
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="34"/>
+			<integer value="99"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -60,7 +60,7 @@
 											<object class="IBUIImageView" id="1025293068">
 												<reference key="NSNextResponder" ref="575561560"/>
 												<int key="NSvFlags">256</int>
-												<string key="NSFrame">{{14, 5}, {291, 33}}</string>
+												<string key="NSFrame">{{14, 5}, {292, 34}}</string>
 												<reference key="NSSuperview" ref="575561560"/>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -75,7 +75,7 @@
 											<object class="IBUIButton" id="580310624">
 												<reference key="NSNextResponder" ref="575561560"/>
 												<int key="NSvFlags">292</int>
-												<string key="NSFrame">{{264.5, 8.5}, {37, 26}}</string>
+												<string key="NSFrame">{{258, 2.5}, {55, 39}}</string>
 												<reference key="NSSuperview" ref="575561560"/>
 												<bool key="IBUIOpaque">NO</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -108,30 +108,33 @@
 													<string key="NSResourceName">btn_search_off.png</string>
 												</object>
 											</object>
-											<object class="IBUITextField" id="1058524136">
+											<object class="IBUITextField" id="284361051">
 												<reference key="NSNextResponder" ref="575561560"/>
 												<int key="NSvFlags">292</int>
-												<string key="NSFrame">{{20, 6}, {241, 31}}</string>
+												<string key="NSFrame">{{25, 7}, {231, 31}}</string>
 												<reference key="NSSuperview" ref="575561560"/>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 												<int key="IBUIContentVerticalAlignment">0</int>
-												<string key="IBUIText">메뉴를 검색해주세요.</string>
+												<string key="IBUIText">메뉴를 검색해 주세요</string>
 												<object class="NSColor" key="IBUITextColor">
 													<int key="NSColorSpace">2</int>
-													<bytes key="NSRGB">MC45NjA3ODQzNzU3IDAuMDAzOTIxNTY4ODU5IDAAA</bytes>
+													<bytes key="NSRGB">MC44MDM5MjE1Njg2IDAuMDAzOTIxNTY4NjI3IDAAA</bytes>
+												</object>
+												<object class="NSFont" key="IBUIFont">
+													<string key="NSName">AppleGothic</string>
+													<double key="NSSize">14</double>
+													<int key="NSfFlags">16</int>
 												</object>
 												<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
 												<float key="IBUIMinimumFontSize">17</float>
 												<object class="IBUITextInputTraits" key="IBUITextInputTraits">
-													<int key="IBUIAutocorrectionType">1</int>
-													<int key="IBUIReturnKeyType">6</int>
 													<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 												</object>
 											</object>
 										</object>
-										<string key="NSFrame">{{0, 295}, {320, 43}}</string>
+										<string key="NSFrame">{{0, 316}, {320, 43}}</string>
 										<reference key="NSSuperview" ref="317222656"/>
 										<object class="NSColor" key="IBUIBackgroundColor" id="170490558">
 											<int key="NSColorSpace">2</int>
@@ -142,7 +145,7 @@
 									<object class="IBUIButton" id="24156406">
 										<reference key="NSNextResponder" ref="317222656"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{11, 18}, {147, 140}}</string>
+										<string key="NSFrame">{{11, 26}, {145, 135}}</string>
 										<reference key="NSSuperview" ref="317222656"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -168,7 +171,7 @@
 									<object class="IBUIButton" id="180095724">
 										<reference key="NSNextResponder" ref="317222656"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{161, 18}, {147, 140}}</string>
+										<string key="NSFrame">{{160, 26}, {145, 135}}</string>
 										<reference key="NSSuperview" ref="317222656"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -194,7 +197,7 @@
 									<object class="IBUIButton" id="230691205">
 										<reference key="NSNextResponder" ref="317222656"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{11, 168}, {97, 113}}</string>
+										<string key="NSFrame">{{11, 190}, {100, 102}}</string>
 										<reference key="NSSuperview" ref="317222656"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -220,7 +223,7 @@
 									<object class="IBUIButton" id="873114651">
 										<reference key="NSNextResponder" ref="317222656"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{111, 168}, {97, 113}}</string>
+										<string key="NSFrame">{{119, 190}, {90, 102}}</string>
 										<reference key="NSSuperview" ref="317222656"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -246,7 +249,7 @@
 									<object class="IBUIButton" id="41137468">
 										<reference key="NSNextResponder" ref="317222656"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{211, 168}, {97, 113}}</string>
+										<string key="NSFrame">{{211, 190}, {100, 102}}</string>
 										<reference key="NSSuperview" ref="317222656"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -286,7 +289,7 @@
 									<object class="IBUIImageView" id="892004693">
 										<reference key="NSNextResponder" ref="161766813"/>
 										<int key="NSvFlags">256</int>
-										<string key="NSFrameSize">{320, 76}</string>
+										<string key="NSFrameSize">{320, 80}</string>
 										<reference key="NSSuperview" ref="161766813"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -301,7 +304,7 @@
 									<object class="IBUIImageView" id="977104606">
 										<reference key="NSNextResponder" ref="161766813"/>
 										<int key="NSvFlags">256</int>
-										<string key="NSFrameSize">{320, 76}</string>
+										<string key="NSFrameSize">{320, 80}</string>
 										<reference key="NSSuperview" ref="161766813"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -316,7 +319,7 @@
 									<object class="IBUIImageView" id="905668024">
 										<reference key="NSNextResponder" ref="161766813"/>
 										<int key="NSvFlags">256</int>
-										<string key="NSFrameSize">{320, 76}</string>
+										<string key="NSFrameSize">{320, 80}</string>
 										<reference key="NSSuperview" ref="161766813"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -331,14 +334,14 @@
 									<object class="IBUIScrollView" id="290581688">
 										<reference key="NSNextResponder" ref="161766813"/>
 										<int key="NSvFlags">274</int>
-										<string key="NSFrame">{{0, 10}, {320, 70}}</string>
+										<string key="NSFrame">{{0, 10}, {320, 80}}</string>
 										<reference key="NSSuperview" ref="161766813"/>
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<bool key="IBUIMultipleTouchEnabled">YES</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 								</object>
-								<string key="NSFrame">{{0, 284}, {320, 80}}</string>
+								<string key="NSFrame">{{0, 114}, {320, 80}}</string>
 								<reference key="NSSuperview" ref="547637441"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">2</int>
@@ -354,7 +357,7 @@
 									<object class="IBUIImageView" id="586246702">
 										<reference key="NSNextResponder" ref="925170315"/>
 										<int key="NSvFlags">256</int>
-										<string key="NSFrameSize">{320, 79}</string>
+										<string key="NSFrame">{{-2, 0}, {320, 80}}</string>
 										<reference key="NSSuperview" ref="925170315"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -369,7 +372,7 @@
 									<object class="IBUIImageView" id="255846615">
 										<reference key="NSNextResponder" ref="925170315"/>
 										<int key="NSvFlags">256</int>
-										<string key="NSFrameSize">{320, 79}</string>
+										<string key="NSFrame">{{-2, 0}, {320, 80}}</string>
 										<reference key="NSSuperview" ref="925170315"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -384,14 +387,14 @@
 									<object class="IBUIScrollView" id="370317457">
 										<reference key="NSNextResponder" ref="925170315"/>
 										<int key="NSvFlags">274</int>
-										<string key="NSFrameSize">{320, 70}</string>
+										<string key="NSFrame">{{-2, 0}, {320, 80}}</string>
 										<reference key="NSSuperview" ref="925170315"/>
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<bool key="IBUIMultipleTouchEnabled">YES</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 								</object>
-								<string key="NSFrame">{{0, 254}, {320, 80}}</string>
+								<string key="NSFrame">{{0, 39}, {320, 80}}</string>
 								<reference key="NSSuperview" ref="547637441"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">2</int>
@@ -670,9 +673,9 @@
 						<reference key="object" ref="547637441"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="317222656"/>
 							<reference ref="925170315"/>
 							<reference ref="161766813"/>
+							<reference ref="317222656"/>
 						</object>
 						<reference key="parent" ref="883825266"/>
 					</object>
@@ -697,7 +700,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="1025293068"/>
 							<reference ref="580310624"/>
-							<reference ref="1058524136"/>
+							<reference ref="284361051"/>
 						</object>
 						<reference key="parent" ref="317222656"/>
 					</object>
@@ -709,11 +712,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">124</int>
 						<reference key="object" ref="580310624"/>
-						<reference key="parent" ref="575561560"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">126</int>
-						<reference key="object" ref="1058524136"/>
 						<reference key="parent" ref="575561560"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -746,9 +744,9 @@
 						<reference key="object" ref="925170315"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="370317457"/>
 							<reference ref="255846615"/>
 							<reference ref="586246702"/>
+							<reference ref="370317457"/>
 						</object>
 						<reference key="parent" ref="547637441"/>
 					</object>
@@ -799,6 +797,11 @@
 						<reference key="object" ref="892004693"/>
 						<reference key="parent" ref="161766813"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">155</int>
+						<reference key="object" ref="284361051"/>
+						<reference key="parent" ref="575561560"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -816,7 +819,6 @@
 					<string>123.IBViewBoundsToFrameTransform</string>
 					<string>124.IBPluginDependency</string>
 					<string>124.IBViewBoundsToFrameTransform</string>
-					<string>126.IBPluginDependency</string>
 					<string>127.IBPluginDependency</string>
 					<string>127.IBViewBoundsToFrameTransform</string>
 					<string>128.IBPluginDependency</string>
@@ -824,6 +826,8 @@
 					<string>139.IBViewBoundsToFrameTransform</string>
 					<string>140.IBViewBoundsToFrameTransform</string>
 					<string>141.IBViewBoundsToFrameTransform</string>
+					<string>155.IBPluginDependency</string>
+					<string>155.IBViewBoundsToFrameTransform</string>
 					<string>34.IBEditorWindowLastContentRect</string>
 					<string>34.IBPluginDependency</string>
 					<string>83.IBPluginDependency</string>
@@ -865,13 +869,12 @@
 						<bytes key="NSTransformStruct">AUN6gABAsAAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">AUOggABCMAAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAAAAAAAAw5aAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAAAAAAAAw7cAAA</bytes>
 					</object>
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">P4AAAL+AAAAAAAAAwpQAAA</bytes>
@@ -882,7 +885,11 @@
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">P4AAAL+AAABC0gAAwpQAAA</bytes>
 					</object>
-					<string>{{639, 279}, {320, 412}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<object class="NSAffineTransform">
+						<bytes key="NSTransformStruct">P4AAAL+AAABByAAAwhAAAA</bytes>
+					</object>
+					<string>{{596, 278}, {320, 412}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -930,14 +937,14 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">153</int>
+			<int key="maxID">155</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
 					<string key="className">MainBodyViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">UIViewControllerTemplate</string>
 					<object class="NSMutableDictionary" key="actions">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
@@ -1117,6 +1124,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/MainBody/MainBodyViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIViewControllerTemplate</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">TemplateCell/UIViewControllerTemplate.h</string>
 					</object>
 				</object>
 			</object>
@@ -1369,24 +1384,24 @@
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{291, 33}</string>
-				<string>{320, 79}</string>
-				<string>{320, 79}</string>
-				<string>{320, 76}</string>
-				<string>{320, 76}</string>
-				<string>{320, 76}</string>
-				<string>{37, 26}</string>
-				<string>{37, 26}</string>
-				<string>{147, 140}</string>
-				<string>{147, 140}</string>
-				<string>{147, 140}</string>
-				<string>{147, 140}</string>
-				<string>{97, 113}</string>
-				<string>{97, 113}</string>
-				<string>{97, 113}</string>
-				<string>{97, 113}</string>
-				<string>{97, 113}</string>
-				<string>{97, 113}</string>
+				<string>{292, 34}</string>
+				<string>{320, 80}</string>
+				<string>{320, 80}</string>
+				<string>{320, 80}</string>
+				<string>{320, 80}</string>
+				<string>{320, 80}</string>
+				<string>{41, 34}</string>
+				<string>{41, 34}</string>
+				<string>{145, 135}</string>
+				<string>{145, 135}</string>
+				<string>{145, 135}</string>
+				<string>{145, 135}</string>
+				<string>{100, 102}</string>
+				<string>{100, 102}</string>
+				<string>{90, 102}</string>
+				<string>{90, 102}</string>
+				<string>{100, 102}</string>
+				<string>{100, 102}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">132</string>
